--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,13 +12,16 @@
 html,
 body {
   height: 100%;
+  min-height: 100vh;
+  width: 100%;
   font-family: "Poppins", sans-serif;
   font-size: 16px;
-}
-body {
+  position: relative;
+  overflow: hidden;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  z-index: -99;
 }
 
 img,
@@ -50,9 +53,59 @@ a {
   text-decoration: none;
   color: inherit;
 }
+ul {
+  list-style: none;
+}
+.App {
+  width: 100%;
+  height: 100%;
+}
 .container {
   width: 100%;
   max-width: 1180px;
   margin: 0 auto;
   padding: 0 20px;
+}
+.dropdown-btn {
+  position: relative;
+}
+.dropdown {
+  position: absolute;
+  left: -270px;
+  top: 24px;
+  min-width: 300px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  z-index: 99;
+  max-height: 500px;
+  display: none;
+}
+.dropdown-btn:hover .dropdown {
+  display: block;
+}
+.dropdown-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  border-bottom: solid 1px #e2e8f00d;
+  font-size: 1rem;
+}
+.dropdown-header-icon {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.dropdown-body {
+  max-height: 400px;
+  width: 100%;
+  overflow-y: scroll;
+}
+.dropdown-list {
+  width: 100%;
+  height: 100%;
+}
+.dropdown-item {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 0.3rem 1rem;
 }
